# advent-of-code-2022

day-1/: CMakeLists.txt  main.cpp
day-2/: CMakeLists.txt  README.md  main.cpp
